objects/CSS_WS_Policy_Campaign_Decision_table__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <fields>
        <fullName>Business_Name__c</fullName>
        <label>Business Name</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Exp_Years_In_Service__c</fullName>
        <label>Exp Years In Service</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Policy_Campaign_Name__c</fullName>
        <label>Policy Campaign Name</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Program_End_Date__c</fullName>
        <label>Program End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Program_Start_Date__c</fullName>
        <label>Program Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Years_In_Service__c</fullName>
        <label>Years In Service</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>CSS WS Policy Campaign Decision Table</label>
</CustomObject>